--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div>
                     <div class="flex justify-center space-x-2 mb-6 p-1 bg-neutral-800 rounded-lg"><button id="btn-tx" class="tab-btn active px-4 py-2 text-sm font-semibold rounded-md w-full">Transactions</button><button id="btn-addr" class="tab-btn px-4 py-2 text-sm font-semibold rounded-md w-full">Active Addresses</button><button id="btn-tvl" class="tab-btn px-4 py-2 text-sm font-semibold rounded-md w-full">Total Value Locked</button></div>
                     <div class="h-96 relative"><div id="chart-tx-container" class="h-full w-full"><canvas id="dailyTransactionsChart"></canvas></div><div id="chart-addr-container" class="hidden h-full w-full"><canvas id="dailyActiveAddressesChart"></canvas></div><div id="chart-tvl-container" class="hidden h-full w-full"><canvas id="tvlChart"></canvas></div></div>
-                    <p class="source-text">Live Data Sources: artemis.xyz, Yahoo Finance, blockchain.com (simulated)</p>
+                    <p class="source-text">Live Data Sources: artemis.xyz, Yahoo Finance, blockchain.com API</p>
                 </div>
                  <div class="chart-card p-6 md:p-8">
                     <h3 class="text-xl font-bold text-sky-300">Ethereum Key Metrics Correlation</h3>
